[gd_scene load_steps=3 format=3 uid="uid://cgn7hplmfhgkq"]

[ext_resource type="Script" path="res://scripts/enemy.gd" id="1_0id1p"]

[sub_resource type="CircleShape2D" id="CircleShape2D_l228c"]
radius = 1197.03

[node name="Enemy" type="CharacterBody2D"]
script = ExtResource("1_0id1p")

[node name="DetectionArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource("CircleShape2D_l228c")

[node name="RayCast2D" type="RayCast2D" parent="."]
collision_mask = 2

[node name="last_sight_timer" type="Timer" parent="."]
wait_time = 2.5
one_shot = true

[node name="random_movement_timer" type="Timer" parent="."]
wait_time = 1.5
autostart = true

[connection signal="body_entered" from="DetectionArea" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="_on_detection_area_body_exited"]
[connection signal="timeout" from="last_sight_timer" to="." method="_on_last_sight_timer_timeout"]
[connection signal="timeout" from="random_movement_timer" to="." method="_on_random_movement_timer_timeout"]
